--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <!-- MENU ENCABEZADO -->
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">Nick</a>
+                <a href="#">DevJoel</a>
             </div>
             <nav id="nav">
                 <ul>
@@ -21,7 +25,6 @@
                     <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
                     <li><a href="#skills" onclick="seleccionar()">SKILLS</a></li>
                     <li><a href="#curriculum" onclick="seleccionar()">CURRICULUM</a></li>
-                    <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
                 </ul>
             </nav>
@@ -35,16 +38,13 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="img/hero.png" alt="">
+                <img src="img/avatar.png" alt="">
             </div>
-            <h1>NICK PEREZ</h1>
-            <h2>Ingeniero de Software - Experto UI/UX</h2>
+            <h1>Joel Llanos</h1>
+            <h2>Ingeniero de Sistemas - Developer FrontEnd</h2>
             <div class="redes">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-skype"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-solid fa-rss"></i></a>
+                <a href="https://www.facebook.com/joel.llanos.5015" target="_blank"><i
+                        class="fa-brands fa-facebook-f"></i></a>
             </div>
         </div>
     </section>
@@ -53,7 +53,9 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Nick Perez.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam unde soluta minima necessitatibus, voluptas consectetur vero officiis quas, explicabo deleniti repellendus aliquid debitis maiores numquam voluptate reprehenderit in delectus dolores.</p>
+            <p><span>Hola, soy Joel Llanos.</span> apasionado desarrollador web en constante crecimiento y aprendizaje.
+                Me gustaria ayudarte en cualquiero proyecto que necesites, sería un placer para mí brindarte mis
+                conocimientos para contruir tus ideas por medio de la programación</p>
 
             <div class="fila">
                 <!-- datos personales -->
@@ -62,28 +64,24 @@
                     <ul>
                         <li>
                             <strong>Cumpleaños</strong>
-                            15-01-1980
+                            01-02-2000
                         </li>
                         <li>
                             <strong>Teléfono</strong>
-                            2555 5454545
+                            72549764
                         </li>
                         <li>
                             <strong>Email</strong>
-                            cw@example.com
-                        </li>
-                        <li>
-                            <strong>Website</strong>
-                            www.example.com
+                            joellanos654@gmail.com
                         </li>
                         <li>
                             <strong>Dirección</strong>
-                            123 San Luis, Argentina
+                            Av. Final Froilan Tejerina
                         </li>
-                        <li>
+                        <!-- <li>
                             <strong>Cargo</strong>
-                            <span>FREELANCE</span>
-                        </li>
+                            <span>Desarrolla</span>
+                        </li> -->
                     </ul>
                 </div>
 
@@ -123,14 +121,17 @@
                             <i class="fa-solid fa-camera"></i>
                             <span>FOTOS</span>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
-            <button>
-                Descargar CV <i class="fa-solid fa-download"></i>
-                <span class="overlay"></span>
-            </button>
+
+            <!-- <a href="img/cv.pdf" download>
+                <button>
+                    Descargar CV <i class="fa-solid fa-download"></i>
+                    <span class="overlay"></span>
+                </button>
+            </a> -->
         </div>
     </section>
 
@@ -154,31 +155,15 @@
                         <span>HTML & CSS</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>89%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Photoshop</span>
+                        <span>React JS</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>95%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <span>Wordpress</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>81%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <span>Drupa</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>55%</span>
+                                <span>70%</span>
                             </div>
                         </div>
                     </div>
@@ -198,7 +183,7 @@
                         <span>Trabajo en Equipo</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>70%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -206,23 +191,7 @@
                         <span>Creatividad</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>99%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <span>Dedicación</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>65%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <span>Proyect Management</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>94%</span>
+                                <span>70%</span>
                             </div>
                         </div>
                     </div>
@@ -239,28 +208,25 @@
                 <div class="col izquierda">
                     <h3>Educación</h3>
                     <div class="item izq">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Oxford</span>
-                        <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <h4>Bachiller</h4>
+                        <span class="casa">U.E. Cnl. Eulogio Ruiz</span>
+                        <span class="fecha">2004 - 2017</span>
+                        <p>completé mi educación primaria y secundaria desde 2004 hasta 2017. Durante este periodo,
+                            adquirí
+                            conocimientos sólidos y desarrollé habilidades académicas que sientan las bases para mi
+                            crecimiento personal y profesional</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
                     </div>
                     <div class="item izq">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Oxford</span>
-                        <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
-                        <div class="conectori">
-                            <div class="circuloi"></div>
-                        </div>
-                    </div>
-                    <div class="item izq">
-                        <h4>Arte y Multimedia</h4>
-                        <span class="casa">Universidad de Oxford</span>
-                        <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <h4>Estudios Universitarios</h4>
+                        <span class="casa">Universidad Autónoma Tomás Frías</span>
+                        <span class="fecha">2018 - 2023</span>
+                        <p>Ingresé a la Universidad el 2018 para perseguir mis estudios superiores.
+                            Actualmente, me encuentro enfocado en el área de desarrollo web y he tenido la
+                            oportunidad
+                            de explorar diversas áreas de interés académico.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -271,27 +237,25 @@
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
                         <h4>Front Developer</h4>
-                        <span class="casa">Nombre de Compañía</span>
-                        <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
-                        <div class="conectord">
-                            <div class="circulod"></div>
-                        </div>
-                    </div>
-                    <div class="item der">
-                        <h4>Front Developer</h4>
-                        <span class="casa">Nombre de Compañía</span>
-                        <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
-                        <div class="conectord">
-                            <div class="circulod"></div>
-                        </div>
-                    </div>
-                    <div class="item der">
-                        <h4>Front Developer</h4>
-                        <span class="casa">Nombre de Compañía</span>
-                        <span class="fecha">2005 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <span class="casa">Fundación de Software Libre</span>
+                        <span class="fecha">2022 - 2023</span>
+                        <p>
+                            Durante el último año de mi permanencia en la universidad, tuve el privilegio de formar
+                            parte de un equipo
+                            de trabajo pionero denominado "Fundación de Software Libre". Este proyecto fue el culmen de
+                            mis estudios,
+                            dedicado al desarrollo de diversos sistemas con un enfoque en la promoción y adopción de
+                            tecnologías de código
+                            abierto.
+                        </p>
+
+                        <p style="margin-top: 20px;">
+                            Como miembro activo de la fundación, contribuí al diseño, desarrollo y implementación de
+                            soluciones
+                            innovadoras. Trabajamos arduamente para fomentar la filosofía del software libre y para
+                            brindar soluciones
+                            tecnológicas accesibles a través de nuestra labor colaborativa.
+                        </p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
@@ -301,7 +265,7 @@
         </div>
     </section>
 
-    <!-- SECCION PORTFOLIO -->
+    <!-- SECCION PORTFOLIO
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
             <h2>PORTFOLIO</h2>
@@ -350,7 +314,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- SECCION CONTACTO -->
     <section id="contacto" class="contacto">
@@ -358,36 +322,19 @@
             <h2>CONTACTO</h2>
             <div class="fila">
                 <!-- Formulario -->
-                <div class="col">
-                    <input type="text" placeholder="Tú Nombre">
-                    <input type="text" placeholder="Número telefónico">
-                    <input type="text" placeholder="Dirección de correo">
-                    <input type="text" placeholder="Tema">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
-                    <button>
+                <form action="https://formspree.io/f/xzbnzgdv" method="POST" class="col">
+                    <input name="name" type="text" placeholder="Tú Nombre">
+                    <input name="phone" type="text" placeholder="Número telefónico">
+                    <input name="email" type="text" placeholder="Dirección de correo">
+                    <textarea name="message" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                    <button type="submit">
                         Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
                         <span class="overlay"></span>
                     </button>
-                </div>
+                </form>
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="img/ubicacion.png" alt="">
-                    <div class="info">
-                        <ul>
-                            <li>
-                                <i class="fa-solid fa-location-dot"></i>
-                                Nicaragua 159, San Rafael Mza
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-mobile-screen"></i>
-                                Llamanos: 2384 - 4343443 
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-envelope"></i>
-                                Email: cw@example.com
-                            </li>
-                        </ul>
-                    </div>
+                    <img src="img/contacto.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -399,14 +346,13 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-skype"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="#"><i class="fa-solid fa-rss"></i></a>
+            <a href="https://www.facebook.com/joel.llanos.5015" target="_blank"><i
+                    class="fa-brands fa-facebook-f"></i></a>
+
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 </html>
