--- a/index.html
+++ b/index.html
@@ -144,14 +144,6 @@
                 <div class="col">
                     <h3>Technical Skills</h3>
                     <div class="skill">
-                        <span>Javascript</span>
-                        <div class="barra-skill">
-                            <div class="progreso">
-                                <span>75%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill">
                         <span>HTML & CSS</span>
                         <div class="barra-skill">
                             <div class="progreso">
@@ -160,7 +152,34 @@
                         </div>
                     </div>
                     <div class="skill">
+                        <span>JavaScript</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>75%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <span>TypeScript</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>90%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
                         <span>React JS</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="skill">
+                        <span>Nest JS</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>70%</span>
@@ -255,6 +274,22 @@
                             innovadoras. Trabajamos arduamente para fomentar la filosofía del software libre y para
                             brindar soluciones
                             tecnológicas accesibles a través de nuestra labor colaborativa.
+                        </p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+
+                    <div class="item der">
+                        <h4>Desarrollador de Software</h4>
+                        <span class="casa">Consultora Multidisciplinaria Quimeras e Icarus Consultores</span>
+                        <span class="fecha">2023 - 2024</span>
+                        <p>
+                            Durante mi tiempo en la consultora, tuve la oportunidad de fortalecer mis habilidades como programador web, contribuyendo al desarrollo de herramientas online que automatizaban y simplificaban procesos manuales, especialmente en cálculos de fechas y redacción de mensajes internos. Además, lideré el desarrollo de un bot de WhatsApp para mejorar la comunicación con nuestros clientes.
+                        </p>
+
+                        <p style="margin-top: 20px;">
+                            Además de mis habilidades técnicas, pude desarrollar mis habilidades blandas, especialmente en la comunicación con los clientes y la atención al cliente. Esta experiencia me permitió crecer tanto profesional como personalmente, destacando mi capacidad para trabajar en equipo y adaptarme a diversas situaciones.
                         </p>
                         <div class="conectord">
                             <div class="circulod"></div>
